manifest/prod-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp-green
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aspnetapp-green
  template:
    metadata:
      labels:
        app: aspnetapp-green
    spec:
      containers:
        - name: aspnetapp
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: storage
              mountPath: /var/aspnetapp/data

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: aspnetapp-pvc-green
      imagePullSecrets:
        - name: acr-secret
