manifest/prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp-service
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: aspnetapp
    color: blue # Initially set to blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
