manifest/agic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: nginx-cert
      hosts:
        - XXXXXX.com
  rules:
    - host: XXXXXX.com.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aspnetapp-service
                port:
                  number: 80
